feat(blog): add mock posts, blog list page and basic blog styles
 Changes to be committed:
	new file:   next.config.mjs
	modified:   src/app/blog/page.tsx
	new file:   src/components/blog/BlogCard.tsx
	new file:   src/components/blog/BlogList.tsx
	new file:   src/lib/blog/mockPosts.ts
	new file:   src/styles/components/_blog.scss
	modified:   src/styles/globals.scss
	new file:   src/types/blog.ts

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,6 +6,7 @@
 /* @import "./components/forms"; */
 @import './components/home';
 @import './components/pages';
+@import './components/blog';
 
 /* Reset simples */
 
