--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -6,6 +6,12 @@
   --colorPrimary: #3c5979;
   --colorPrimaryLight: #c5d3d6;
   --colorSecondary: #8fbaea;
+  --colorMainBackground: #c5d3d6;
+  --colorMainBackgroundMobile: linear-gradient(
+    180deg,
+    rgba(197, 211, 214, 1) 0%,
+    rgba(242, 242, 242, 0.1) 100%
+  );
   --colorBackground: #ffffff;
   --colorText: #111111;
 
